chore: update java version in compiler plugin